[package]
name = "wtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bincode = "1.3.3"

[[bin]]
name = "wtfs"
path = "src/bin/main.rs"

[dev-dependencies]
criterion = "0.5.1"
rand = { version = "0.9.0-alpha.1" }

[[bench]]
name = "mainblock_benchmark"
harness = false