workspace = { members = [ "mineral", "p2p"] }
[package]
name = "terra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bincode = "1.3.3"
serde = "1.0.197"
lru = "0.12.3"

[[bin]]
name = "terra"
path = "src/bin/main.rs"

[dev-dependencies]
criterion = "0.5.1"
rand = { version = "0.9.0-alpha.1" }