[workspace]
members = [ "mineral", "p2p", "peer"]

[package]
name = "terra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
byteorder = "1.4.3"
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
lru = "0.12.3"
log = "0.4.21"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
pretty_env_logger = "0.5"
hex = "0.4"

[[bin]]
name = "terra"
path = "src/bin/main.rs"

[dev-dependencies]
criterion = "0.5.1"
rand = { version = "0.9.0-alpha.1" }

[dependencies]
pretty_env_logger.workspace = true
