[package]
edition = "2018"
name = "peer"
version = "0.1.0"
license = "MIT"
description = """
一款去中心化KV数据库系统
"""

[[bin]]
name = "peer-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "peer-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.5"
atoi = "2.0.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mineral = { path = "../mineral" }

byteorder = "1.5.0"
bincode = "1.3.3"
serde = "1.0.200"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
criterion = "0.5.1"
rand = { version = "0.9.0-alpha.1" }
