[package]
edition = "2018"
name = "peer"
version = "0.1.0"
license = "MIT"
description = """
一款去中心化KV数据库系统
"""

[[bin]]
name = "peer-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "peer-server"
path = "src/bin/server.rs"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
hex.workspace = true

async-stream = "0.3.5"
atoi = "2.0.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mineral = { path = "../mineral" }
p2p = { path="../p2p" }
k256 = { version = "0.13", features = ["ecdsa"] }

byteorder = "1.5.0"
bincode = "1.3.3"
toml = "0.8.14"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
prost = "0.11"
rand = "0.8"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
criterion = "0.5.1"
rand = { version = "0.9.0-alpha.1" }
hex-literal = "0.4"

[build-dependencies]
prost-build = "0.11"
